K8S/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: default
  labels:
    role: frontend
    env: dev
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  selector:
    matchLabels:
      role: frontend
  template:
    metadata:
      labels:
        role: frontend
    spec:
      imagePullSecrets:
      - name: image-pull-secret-repo-1
      containers:
      - name: frontend
        image: 729207654069.dkr.ecr.me-south-1.amazonaws.com/frontend:47
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
