K8S/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mainlb
  namespace: mern
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/subnets: "subnet-091456ed004c3ca68,subnet-0ed77a6e55be04682"

spec:
  ingressClassName: alb
  rules:
  - host: mern.app
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 3500
      - path: /healthz
        pathType: Exact
        backend:
          service:
            name: api
            port:
              number: 3500
      - path: /ready
        pathType: Exact
        backend:
          service:
            name: api
            port:
              number: 3500
      - path: /started
        pathType: Exact
        backend:
          service:
            name: api
            port:
              number: 3500
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 3000
